--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "liri-homework",
+  "name": "liri",
   "version": "1.0.0",
-  "description": "",
-  "main": "script.js",
+  "description": "liri bot",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aidanclemente/liri.git"
+  },
+  "keywords": [
+    "liri"
+  ],
+  "author": "Aidan Clemente",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aidanclemente/liri/issues"
+  },
+  "homepage": "https://github.com/aidanclemente/liri#readme",
   "dependencies": {
-    "liri": "^1.0.1",
+    "dotenv": "^4.0.0",
     "node-spotify-api": "^1.0.7",
-    "request": "^2.87.0",
     "twitter": "^1.7.1"
-  }
+  },
+  "devDependencies": {}
 }
